--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,8 @@ body {
 	max-width: 100%;
 }
 
-.skillsSection {
+.skillsSection,
+.contactSection {
 	background-color: #e74c3c;
 	color: #fff;
 }
@@ -106,7 +107,7 @@ body {
 
 .squareItem {
 	margin-top: 30px;
-    position: relative;
+  position: relative;
 }
 
 .squareInnerContainer {
@@ -149,6 +150,17 @@ body {
 	margin: 0;
 }
 
+.squareIcon {
+	position: absolute;
+	left: 50%;
+	top: -30%;
+	width: 40%;
+	height: 60px;
+	font-size: 45px;
+	margin-left: -20%;
+	color: #444;
+}
+
 .aboutImage{
 	margin-top: 8px;
 	border: 1px solid #444;
@@ -159,49 +171,22 @@ body {
 	position: relative;
 }
 
-.btn{
-  width: 200px;
-  height: 60px;
-  background: none;
-  border: 4px solid;
-  color: #3498db;
-  font-weight: 700;
-  text-transform: uppercase;
-  cursor: pointer;
-  font-size: 16px;
-  position: absolute;
-	margin-left: 200px;
-}
-
-.btn::before,.btn::after{
-  content: "";
-  position: absolute;
-  width: 14px;
-  height: 4px;
-  background: #fff;
-  transform: skewX(50deg);
-  transition: .4s linear;
-}
-
-.btn::before{
-  top: -4px;
-  left: 10%;
-}
-
-.btn::after{
-  bottom: -4px;
-  right: 10%;
-}
-
-.btn:hover::before{
-  left: 80%;
-}
-
-.btn:hover::after{
-  right: 80%;
-}
-
 .col-md-7 p {
 	text-align: justify;
 	font-family: Arial, Helvetica;
+}
+
+.contactButton {
+		color: #fff;
+    padding: 15px 20px;
+    display: inline-block;
+    margin-top: 20px;
+    border: 1px solid #fff;
+    border-radius: 2px;
+}
+
+.contactButton:hover {
+	text-decoration: none;
+	color: #e74c3c;
+	background-color: #fff;
 }
