--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ body {
 }
 
 #navigation {
-  background-color: #e74c3c;
+  background-color: #d82c2e;
   padding: 20px 10px;
   z-index: 100;
   width: 100%;
@@ -347,8 +347,19 @@ body {
   color: #fff;
 }
 
-#navigation li a:hover {
-  color: #444;
+.navbar-nav li a:hover {
+  background: #c12728;
+  color: white;
+}
+
+.navbar-nav li a:focus {
+  background: #c12728;
+  color: white;
+}
+
+.navbar-nav li.active a {
+  background: #c12728;
+  color: white;
 }
 
 .navbar-brand,
@@ -384,26 +395,29 @@ body {
 
 footer {
   background: #363b3f;
-  height: 0;
+  padding: 0;
+  height:50px;
 }
 
 footer p {
   font-size: 12px;
-  padding-left: 30px;
   color: white;
   text-align: center;
-  margin-top: -60px;
+  position: relative;
+  bottom: 55px;
 }
 
 footer ul {
-  width: 100%;
   text-align: center;
-  margin-top: 20px;
+  margin: 0 auto 0 auto;
+  position: relative;
+  bottom: 45px;
+  right: 20px;
 }
 
 footer li {
   display: inline-block;
-  margin: 0 4px;
+  margin: 0 auto 0 auto;
 }
 
 footer li a {
