--- a/css/style.css
+++ b/css/style.css
@@ -476,3 +476,23 @@ footer .linkedin {
 footer .linkedin:hover {
   background-color: #0073b2;
 }
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+.main{
+  font-size: 25px;
+  }
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen and (min-width : 321px) {
+.main{
+  font-size: 25px;
+  }
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width : 320px) {
+.main{
+  font-size: 25px;
+  }
+}
