--- a/css/style.css
+++ b/css/style.css
@@ -479,20 +479,20 @@ footer .linkedin:hover {
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 .main{
-  font-size: 25px;
+  font-size: 5%;
   }
 }
 
 /* Smartphones (landscape) ----------- */
 @media only screen and (min-width : 321px) {
 .main{
-  font-size: 25px;
+  font-size: 5%;
   }
 }
 
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 320px) {
 .main{
-  font-size: 25px;
+  font-size: 5%;
   }
 }
