--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,11 @@ body {
   background: url(../img/loader.gif) center center no-repeat;
 }
 
+.items img {
+  height: 300px;
+  width: 300px;
+}
+
 footer {
   background: #363b3f;
   padding: 0;
