--- a/css/style.css
+++ b/css/style.css
@@ -375,13 +375,13 @@ display:none;
 
 #navigation {
   background-color: #d82c2e;
-  padding: 20px 10px;
   z-index: 100;
   width: 100%;
 }
 
 #navigation li {
-  padding: 0 10px;
+ display: inline-block; 
+ padding: 0 5px 0 5px;
 }
 
 #navigation li a {
