--- a/css/style.css
+++ b/css/style.css
@@ -374,10 +374,10 @@ display:none;
 }
 
 #navigation {
-	background-color: #e74c3c;
-    padding: 20px 10px;
-    z-index: 100;
-    width: 100%;
+ background-color: #d82c2e;
+ padding: 20px 10px;
+ z-index: 100;
+ width: 100%;
 }
 
 #navigation li {
@@ -386,6 +386,21 @@ display:none;
 
 #navigation li a {
 	color: #fff;
+}
+
+.navbar-nav li a:hover {
+  background: #c12728;
+  color: white;
+}
+
+.navbar-nav li a:focus {
+  background: #c12728;
+  color: white;
+}
+
+.navbar-nav li.active a {
+  background: #c12728;
+  color: white;
 }
 
 .navbar-brand,
